Rakefile: add emacs compile task. Combine common package files into a variableg to improve DRYness. interface.rb: Apply Roger Pack's patch #12788 (add "." to .rdebugsavehist if other HOME and HOMEPATH aren't defined). rdebug-track.el is now folded into rdebug.el so it's no longer needed. rdebug.el: remove compiler-detected bug

--- a/CHANGES
+++ b/CHANGES
@@ -15,7 +15,9 @@
   the parameters (with the most recent values, not the values at call time).
 - post-mortem "exit" bug fixed. 
 - More Emacs-friendly: rdebug-track.el will track location inside an Emacs
-  shell. Emacs position information shown in breakpoints and catchpoints.
+  shell. Emacs position information is shown in breakpoints and catchpoints
+  similar to gdba. Commands to position in another window a unit test traceback
+  or ruby traceback.
 - INCOMPATIBLE CHANGE: "break" now sets a breakpoint on the current line
   (same as gdb). Use "info break" for a list of breakpoints.
 - INCOMPATIBLE CHANGE: "script" command removed. Use "source" command instead
