--- a/doc/ruby-debug.texi
+++ b/doc/ruby-debug.texi
@@ -2232,9 +2232,15 @@ Shows whether forcestep is in effect or not.
 @item show history filename
 Show the filename in which to record the command history
 (the list of previous commands of which a record is kept).
+@kindex set history save @r{[} on | 1 | off | 0 @r{]}
+@item set history save @r{[} on | 1 | off | 0 @r{]}
+Set whether to save the history on exit.
 @kindex show history save
 @item show history save
 Show saving of the history record on exit.
+@kindex set history size @var{number}
+@item set history size @var{number}
+Set the maximum number of commands to save in the history.
 @kindex show history size
 @item show history size
 Show the size of the command history, ie. the number of previous
