--- a/doc/ruby-debug.texi
+++ b/doc/ruby-debug.texi
@@ -1308,10 +1308,11 @@ ruby-debug help v0.9.4
 Type 'help <command-name>' for help on a specific command
 
 Available commands:
-backtrace  delete   exit    info    next  putl     save    step       up   
-break      display  finish  irb     p     quit     set     thread     var  
-catch      down     frame   list    pp    reload   show    trace      where
-continue   eval     help    method  ps    restart  source  undisplay
+backtrace  disable  exit    irb     pp      restart  step       var  
+break      display  finish  list    ps      save     thread     where
+catch      down     frame   method  putl    set      trace    
+continue   enable   help    next    quit    show     undisplay
+delete     eval     info    p       reload  source   up       
 @end smallexample
 @end flushleft
 @c the above line break eliminates huge line overfull...
@@ -1463,6 +1464,7 @@ Show all display expressions
 @ifset GDB_COMPLETED
 @code{undisplay} does not repeat if you press @key{RET} after using it.
 (Otherwise you would just get the error @samp{No display number @dots{}}.)
+@end ifset
 
 @kindex disable display
 @item disable display @var{dnums}@dots{}
@@ -1474,7 +1476,6 @@ enabled again later.
 @item enable display @var{dnums}@dots{}
 Enable display of item numbers @var{dnums}.  It becomes effective once
 again in auto display of its expression, until you specify otherwise.
-@end ifset
 
 @end table
 
@@ -1897,7 +1898,8 @@ change variables, set new breakpoints or remove old ones, and then
 continue execution.  
 
 @menu
-* Breakpoints::          Breakpoints, watchpoints (break, tbreak, watch, watche, clear)
+* Breakpoints::          Breakpoints (break, catch, delete)
+* Disabling::            Disabling breakpoints (disable, enable)
 * Resuming Execution::   Resuming execution (continue, step, next, finish)
 @end menu
 
@@ -1909,22 +1911,25 @@ A @dfn{breakpoint} makes your script stop whenever a certain point in
 the program is reached.  For each breakpoint, you can add conditions to
 control in finer detail whether your script stops.  
 
-You can specify the place where your script should stop with the
+You specify the place where your script should stop with the
 @code{break} command and its variants.
 
 @cindex breakpoint numbers
 @cindex numbers for breakpoints
-@value{ttDBG} assigns a number to each breakpoint and watchpoint when
+@value{ttDBG} assigns a number to each breakpoint when
 you create it; these numbers are successive integers starting with
 one.  In many of the commands for controlling various features of
 breakpoints you use the breakpoint number to say which breakpoint you
-want to change.  
+want to change. Each breakpoint may be @dfn{enabled} or
+@dfn{disabled}; if disabled, it has no effect on your script until you
+enable it again.
+
 
 @table @code
 @kindex break @ovar{location}
 @kindex b @r{(@code{break})}
 @item break
-Set a breakpiont at the current line.
+Set a breakpoint at the current line.
 
 @item break @var{linenum}
 Set a breakpoint at line @var{linenum} in the current source file.
@@ -1952,11 +1957,97 @@ Set catchpoint to an exception. Without an exception name show catchpoints.
 @kindex delete @ovar{breakpoints}
 @kindex del @r{(@code{delete})}
 @item delete @ovar{breakpoints}
-Delete the breakpoints, watchpoints specified as arguments. 
+Delete the breakpoints specified as arguments. 
 
 If no argument is specified, delete all breakpoints (@DBG asks
 confirmation.  You can abbreviate this command as @code{del}.
+@kindex info breakpoints
+@cindex @code{$_} and @code{info breakpoints}
+@item info breakpoints @ovar{n}
+@itemx info break @ovar{n}
+Print a table of all breakpointsset and not deleted, with the
+following columns for each breakpoint:
+
+@table @emph
+@item Breakpoint Numbers (@samp{Num})
+@item Enabled or Disabled (@samp{Enb})
+Enabled breakpoints are marked with @samp{1}.  @samp{0} marks breakpoints
+that are disabled (not enabled).
+@item File and Line (@samp{file:line})
+The filename and line number inside that file where of breakpoint in
+the script. The file and line are separated with a colon.
+@item Condition
+A condition (an arithmetic expression) which when true causes the
+breakpoint to take effect.
 @end table
+@noindent
+If a breakpoint is conditional, @code{info break} shows the condition on
+the line following the affected breakpoint; breakpoint commands, if any,
+are listed after that.
+
+@code{info break} with a breakpoint number @var{n} as argument lists
+only that breakpoint.
+
+Examples:
+@example
+bashdb<4> @b{info break}
+Breakpoints at following places:
+Num  Enb What
+1    y   gcd.rb:3
+2    y   gcb.rb:28 if n > 1
+bashdb<5> @b{info break 2}
+2    y   gcb.rb:28 if n > 1
+@end example
+@end table
+
+@node Disabling
+@subsection Disabling breakpoints (@samp{disable}, @samp{enable})
+
+Rather than deleting a breakpoint, you might
+prefer to @dfn{disable} it.  This makes the breakpoint inoperative as if
+it had been deleted, but remembers the information on the breakpoint so
+that you can @dfn{enable} it again later.
+
+You disable and enable breakpoints and catchpoints with the
+@code{enable} and @code{disable} commands, optionally specifying one
+or more breakpoint numbers as arguments.  Use @code{info break} to
+print a list of breakpoints and catchpoints if you do not know which
+numbers to use.
+
+A breakpoint or catchpoint can have any different
+states of enablement:
+
+@itemize @bullet
+@item
+Enabled.  The breakpoint stops your program.  A breakpoint set
+with the @code{break} command starts out in this state.
+@item
+Disabled.  The breakpoint has no effect on your program.
+@end itemize
+
+You can use the following commands to enable or disable breakpoints
+and catchpoints:
+
+@table @code
+@kindex disable breakpoints
+@item disable @var{breakpoints}
+Disable the specified breakpoints---or all breakpoints, if none are
+listed.  A disabled breakpoint has no effect but is not forgotten.  All
+options such as ignore-counts, conditions and commands are remembered in
+case the breakpoint is enabled again later.  You may abbreviate
+@code{disable} as @code{dis}.
+
+@kindex enable breakpoints
+@item enable @var{breakpoints}
+Enable the specified breakpoints (or all defined breakpoints).  They
+become effective once again in stopping your program.
+@end table
+
+Breakpoints that you set are initially enabled; subsequently, they
+become disabled or enabled only when you use one of the commands
+above.  (The command @code{until} can set and delete a breakpoint of
+its own, but it does not change the state of your other breakpoints;
+see @ref{Resuming Execution, ,Resuming Execution}.)
 
 @node Resuming Execution
 @subsection Resuming Execution (@samp{step}, @samp{next}, @samp{finish}, @samp{continue})
@@ -2064,7 +2155,7 @@ line number to set a one-time breakpoint which is deleted when that
 breakpoint is reached.
 
 Should the program stop before that breakpoint is reached, for
-example, perhaps another breakpoint or watchpoint is reached first, in
+example, perhaps another breakpointis reached first, in
 a listing of the breakpoints you won't see this entry in the list of
 breakpoints.
 @end table
